--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
+    "graphql-upload": "^11.0.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
