--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.22.2",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-upload": "^11.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
@@ -23,6 +25,8 @@
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -30,6 +34,8 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.2.4"
   }
 }
